--- a/documents/swagger-yaml/cp1-ta.yaml
+++ b/documents/swagger-yaml/cp1-ta.yaml
@@ -199,3 +199,48 @@ paths:
                 description: >-
                   human readable information about the error, if any can be
                   provided
+  /action/observe:
+    get:
+      description: >-
+        observe some of the current state of the robot for visualization
+        and invariant checking for perturbation end points. n.b. this
+        information is to be used strictly in a passive way; it is not to
+        be used for evaluation of the test at all.
+      responses:
+        '200':
+          description: >-
+            successfully computed the observation
+          schema:
+            type: object
+            required:
+              - x
+              - 'y'
+              - battery
+              - sim-time
+            properties:
+              x:
+                type: number
+                format: float
+                description: >-
+                  the current x coordinate of the bot. must be within the
+                  boundaries of the map.
+              y:
+                type: number
+                format: float
+                description: >-
+                  the current y coordinate of the bot. must be within the
+                  boundaries of the map.
+              battery:
+                type: integer
+                minimum: 0
+                description: >-
+                  the current charge of the battery, in mWh
+              sim-time:
+                type: integer
+                minimum: 0
+                description: >-
+                  the time when this observation was computed, in
+                  simulation seconds
+        '400':
+          description: >-
+            encountered an error while computing the observation
