--- a/documents/swagger-yaml/cp1-ta.yaml
+++ b/documents/swagger-yaml/cp1-ta.yaml
@@ -187,7 +187,7 @@ paths:
               message:
                 type: string
                 description: human readable info about what went wrong
-  /action/start:
+  /start:
     post:
       description: start the turtlebot on the mission
       responses:
@@ -203,7 +203,7 @@ paths:
                 description: >-
                   human readable information about the error, if any can be
                   provided
-  /action/observe:
+  /observe:
     get:
       description: >-
         observe some of the current state of the robot for visualization
