--- a/documents/swagger-yaml/cp3-ta.yaml
+++ b/documents/swagger-yaml/cp3-ta.yaml
@@ -170,7 +170,7 @@ paths:
               sim-time:
                 type: integer
                 description: the simulation time when the error occurred
-  /action/observe:
+  /observe:
     get:
       description: >-
         observe some of the current state of the robot for visualization
