--- a/documents/swagger-yaml/cp2-ta.yaml
+++ b/documents/swagger-yaml/cp2-ta.yaml
@@ -6,6 +6,11 @@ schemes:
   - http
 host: brass-ta
 definitions:
+  Adaptation:
+    type: string
+    description: >-
+      placeholder for actual definition of adaptations
+
   SourceLine:
     type: object
     required:
