--- a/cp1/ta/Dockerfile
+++ b/cp1/ta/Dockerfile
@@ -5,6 +5,8 @@ WORKDIR /usr/src/app
 
 COPY requirements.txt /usr/src/app/
 
+COPY network.conf /usr/src/app/
+
 RUN pip3 install --no-cache-dir -r requirements.txt
 
 COPY . /usr/src/app
