--- a/cp1/ta/docker-compose.yml
+++ b/cp1/ta/docker-compose.yml
@@ -28,10 +28,10 @@ services:
       - "ROS_HOSTNAME=cp1_ta"
       - "ROS_MASTER_URI=http://roscore:11311"
       - "TH_URI=${TH_URI}"
-      - "TA_URI=${TA_URI}"
+      - "TA_PORT=${TA_PORT}"
     ports:
-      - 5000:5000
+      - ${TA_PORT}:5000
     depends_on:
       - roscore
      
-    command: bash -c "cd /usr/src/app && python3 -u -m swagger_server ${TH_URI} ${TA_URI}"
+    command: bash -c "cd /usr/src/app && python3 -u -m swagger_server ${TH_URI} 5000"
