--- a/cp1/ta/docker-compose.yml
+++ b/cp1/ta/docker-compose.yml
@@ -33,5 +33,6 @@ services:
       - ${TA_PORT}:5000
     depends_on:
       - roscore
-     
-    command: bash -c "cd /usr/src/app && python3 -u -m swagger_server ${TH_URI} 5000"
+    expose:
+      - ${TA_PORT}
+    command: bash -c "cd /usr/src/app && python3 -u -m swagger_server ${TH_URI}"
